# Master-Haven

./: .gitignore  AUDIT_REPORT_2026-05-13.md  AUDIT_REPORT_USER_2026-05-16.md  CLAUDE.md  LATENCY_FIX_REPORT.md  cert.pem  featured.db.backup  share-urls.html  wizard-mockup-v1_1.html
Haven-Exchange/: .gitignore  KEEPER_API_REFERENCE.md  REMEDIATION_REPORT_V5.md  REMEDIATION_TRACKER_V5.md  TRAVELERS_EXCHANGE_AUDIT_V4_2026-05-06.md
Haven-Exchange/app/: auth.py  main.py  models.py
Haven-Exchange/scripts/: issue_bot_key.py
Haven-Exchange/tests/: smoke_test_e2e.py
Haven-UI/: package-lock.json  package.json  vite.config.mjs
Haven-UI/backend/: constants.py  control_room_api.py  db.py  migrations.py
Haven-UI/data/: haven_ui.db-shm  haven_ui.db-wal
Haven-UI/docs/: cartographer-integration-notes.md
Haven-UI/landing/: index.html
Haven-UI/public/: VH-Cartographer.html  VH-Map-Region.html  VH-Map-ThreeJS.html  VH-System-View.html
Haven-UI/src/: App.jsx
NMS-Haven-Extractor/: pyproject.toml
NMS-Haven-Extractor/docs/: CLAUDE.md
NMS-Haven-Extractor/tests/: test_extraction_core.py
Pi-Monitor/: README.md
Pi-Monitor/electron-app/: main.js  package-lock.json  package.json  preload.js
Pi-Monitor/pi-agent/: install.sh  pi-monitor.service  pi_monitor.py  (+1 more)
SkyScraper/: README.md  app.js  index.html  styles.css
The_Keeper/: .dockerignore  Dockerfile  bot.py  docker-compose.yml  setup.py
archive/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  requirements.txt
audit/: WIZARD_V1_INTEGRATION_AUDIT.md
(+293 files in other folders)
