[project]
name = "nms-haven-extractor"
version = "1.9.7"
description = "Extract planet and system data from No Man's Sky for Voyagers Haven"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}
authors = [
    {name = "Voyagers Haven", email = "haven@example.com"}
]
dependencies = [
    "nmspy>=0.1.0",
    "requests>=2.28.0",
    "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pymhf]
# pyMHF configuration for NMS.py
binary_name = "NMS.exe"

# Path to mods folder - user should update this
# mods_folder = "C:/Games/No Man's Sky/GAMEDATA/MODS"

[tool.pymhf.logging]
level = "INFO"
